feature(trips): Admin can create trips Created endpoint for creating trips [Finishes #167152382]
